# TetraThon-Prototype

./: .gitignore  LICENSE  Readme.md  render.yaml
Backend/: Procfile  generate_mandi_prices.py  pyproject.toml  requirements.txt  test_chunk_5.py  test_milestone_10_audit.py  test_milestone_2.py  test_milestone_3.py  test_milestone_4.py  test_milestone_5.py  test_milestone_6.py  test_milestone_7.py  test_milestone_8.py  test_milestone_9_e2e.py
Backend/App/: __init__.py  database.py  main.py  models.py  schemas.py  seed.py
Backend/App/adapters/: config.py  market_prices.py  weather.py
Backend/App/engine/: advisory.py  decision.py  spoilage.py  transport.py
Backend/App/routers/: advisory.py  crops.py  health.py  leaf_classify.py  locations.py  post_harvest.py  rules.py
Backend/data/: fertiliser_rules.json  irrigation_rules.json  mandi_prices.csv  pest_rules.json
Backend/models/: leaf_classifier.py
Docs/: TetraTHON_2026_Pitch_Deck.md  architecture.md  chunk-1-execution-plan.md  chunk-2-execution-plan.md  chunk-3-execution-plan.md  chunk-4-execution-plan.md  chunk-5-execution-plan.md  handoff-to-p1-phase1.md  handoff-to-p2-phase1.md  user_flows.md
Frontend/: index.html  package-lock.json  package.json  vite.config.js
Frontend/Src/: App.jsx  api.js
Frontend/Src/components/: AdvisoryForm.jsx  AdvisoryResult.jsx  CropList.jsx  Dashboard.jsx  DataStatusIndicator.jsx  HealthCheck.jsx  Layout.jsx  LeafResult.jsx  (+4 more)
initial-docs/: PRD_TetraTHON2026_AgriTech.md  Problem-Stat-Tetra.md  TetraTHON2026_Full_Phase_Chunk_Plan.md
scripts/: create_test_suite_images.py
