[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agritech-backend"
version = "0.1.0"
description = "AgriTech advisory and decision engine backend"
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "fastapi>=0.139.2",
    "uvicorn[standard]>=0.51.0",
    "sqlalchemy>=2.0.51",
    "pydantic>=2.13.4"
]
